# traact_gui

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  imgui.ini
src/: CMakeLists.txt
src/traact/: CMakeLists.txt  DataflowFile.cpp  DataflowFile.h  NodeEditorElements.cpp  NodeEditorElements.h  SelectedTraactElement.h  imgui_gl_util.cpp  imgui_gl_util.h  imgui_util.h  main.cpp  opengl_shader.h
src/traact/app/: MainApp.cpp  MainApp.h  TraactGuiApp.cpp  TraactGuiApp.h  Window.cpp  Window.h
src/traact/application_data/: ApplicationData.cpp  ApplicationData.h  DataPort.cpp  DataPort.h  application_data.h
src/traact/application_data/source/: OpenGlTextureSource.cpp  OpenGlTextureSource.h  RawSource.h
src/traact/debug_run/: CalibrationComponent.cpp  CalibrationComponent.h  DataflowProfileWindow.cpp  DataflowProfileWindow.h  DebugRenderComponent.cpp  DebugRenderComponent.h  DebugRenderer.cpp  DebugRenderer.h  DebugRun.cpp  DebugRun.h  DebugSceneWindow.cpp  DebugSceneWindow.h  ImageComponent.h  KeyPointListComponent.h  PointCloudComponent.cpp  PointCloudComponent.h  Pose6DComponent.h  Position3DComponent.h
src/traact/debug_run/magnum/: Window.cpp  Window.h  magnum_definitions.h
src/traact/debug_run/magnum/feature/: DrawTriangle.cpp  DrawTriangle.h
src/traact/debug_run/scene/: Component.cpp  Component.h  Object.h  Transform.h  Window.cpp  Window.h
src/traact/debug_run/scene/component/: Camera.h  FileReaderWriter.cpp  FileReaderWriter.h  IdentityRotation.h  PoseSource.cpp  PoseSource.h  RenderCoordinateSystem.cpp  RenderCoordinateSystem.h  RenderPointCloud.cpp  RenderPointCloud.h  StaticPose.h
src/traact/editor/: DFGElements.h  DetailsEditor.cpp  DetailsEditor.h  JsonEditorSerialization.cpp  JsonEditorSerialization.h  PatternGraphEditor.cpp  PatternGraphEditor.h
src/traact/opengl/: Framebuffer.cpp  Framebuffer.h  traact_opengl.h
src/traact/state/: ApplicationState.cpp  ApplicationState.h  OpenFiles.h
src/traact/state/project/: Graph.cpp  Graph.h  Project.cpp  Project.h
src/traact/state/project/graph/: Edge.cpp  Edge.h  Node.cpp  Node.h
src/traact/state/project/pattern/: CompositePattern.cpp  CompositePattern.h  FacadePatternFactory.cpp  FacadePatternFactory.h  GlobalPatternFactory.cpp  GlobalPatternFactory.h  Pattern.cpp  Pattern.h  PatternFactory.h  PatternInfo.cpp  PatternInfo.h  PatternInstance.cpp  PatternInstance.h
src/traact/window/: MenuFile.cpp  MenuFile.h  OpenProjects.cpp  OpenProjects.h  WindowDataflow.h  WindowDetails.cpp  WindowDetails.h  WindowLog.cpp  WindowLog.h  WindowOpenFiles.cpp  WindowOpenFiles.h  WindowPatterns.cpp  WindowPatterns.h  WindowRun.cpp  WindowRun.h
src/traact_gui/: CMakeLists.txt  DataflowFile.cpp  DataflowFile.h  ImGuiUtils.h  MainApp.cpp  MainApp.h  NodeEditorElements.cpp  NodeEditorElements.h  SelectedTraactElement.cpp  SelectedTraactElement.h  TraactGuiApp.cpp  TraactGuiApp.h  main.cpp  opengl_shader.cpp  opengl_shader.h
src/traact_gui/app/: MainApp.cpp  MainApp.h  TraactGuiApp.cpp  TraactGuiApp.h  Window.cpp  Window.h
src/traact_gui/application_data/: ApplicationData.cpp  ApplicationData.h  DataPort.cpp  DataPort.h  application_data.h
src/traact_gui/application_data/source/: OpenGlTextureSource.cpp  OpenGlTextureSource.h  RawSource.cpp  RawSource.h
src/traact_gui/debug_run/: CalibrationComponent.h  DebugRenderComponent.cpp  DebugRenderComponent.h  DebugRenderer.cpp  DebugRenderer.h  DebugRun.cpp  DebugRun.h  DebugSceneWindow.cpp  DebugSceneWindow.h  ImageComponent.cpp  ImageComponent.h  KeyPointListComponent.cpp  KeyPointListComponent.h  PointCloudComponent.h  Pose6DComponent.cpp  Pose6DComponent.h  Position3DComponent.cpp  Position3DComponent.h  traact_opengl.h
src/traact_gui/debug_run/scene/: Component.cpp  Component.h  Object.cpp  Object.h  Transform.cpp  Transform.h  Window.cpp  Window.h
src/traact_gui/debug_run/scene/component/: Camera.cpp  Camera.h  FileReaderWriter.cpp  FileReaderWriter.h  IdentityRotation.cpp  IdentityRotation.h  PoseSource.cpp  PoseSource.h  RenderCoordinateSystem.cpp  RenderCoordinateSystem.h  RenderPointCloud.cpp  RenderPointCloud.h  StaticPose.cpp  StaticPose.h
src/traact_gui/editor/: DFGElements.cpp  DFGElements.h  DetailsEditor.cpp  DetailsEditor.h  EditorElements.cpp  EditorElements.h  EditorUtils.cpp  EditorUtils.h  JsonEditorSerialization.cpp  JsonEditorSerialization.h  PatternGraphEditor.cpp  PatternGraphEditor.h  SRGElements.cpp  SRGElements.h
src/traact_gui/state/: ApplicationState.cpp  ApplicationState.h  OpenFiles.cpp  OpenFiles.h
src/traact_gui/utilities/: builders.cpp
src/traact_gui/window/: MenuFile.cpp  MenuFile.h  WindowDataflow.cpp  WindowDataflow.h  WindowDetails.h  WindowOpenFiles.cpp  WindowOpenFiles.h  WindowRun.h
src/traact_gui/windows/: PatternTree.cpp  PatternTree.h  SRG_DFG_Window.cpp  SRG_DFG_Window.h
src/util/: fileutil.h
